--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vite": "^4.3.2"
   },
   "dependencies": {
-    "svelte-routing": "^1.6.0"
+    "svelte-routing": "^1.6.0",
+    "svelte-store": "^0.0.2"
   }
 }
